--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "storybook": "^6.5.12"
+    "storybook": "^6.5.12",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
