--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-vis": "^1.11.7",
     "storybook": "^6.5.12",
     "zustand": "^4.1.1"
   },
@@ -34,6 +35,7 @@
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-vis": "^1.11.11",
     "babel-loader": "^8.2.5",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
