--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8",
     "react-vis": "^1.11.7",
     "storybook": "^6.5.12",
     "zustand": "^4.1.1"
