--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -46,6 +49,9 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.1.1",
+    "jest-environment-jsdom": "^29.1.1",
+    "msw": "^0.47.3",
     "prettier": "^2.7.1",
     "typescript": "4.8.3"
   }
