--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": "./",
+    "paths": {
+      "~components/*": ["src/components/*"],
+      "~pages/*": ["src/pages/*"],
+      "~lib/*": ["src/lib/*"],
+      "~store/*": ["src/store/*"],
+      "~hooks/*": ["src/hooks/*"],
+      "~styles/*": ["src/styles/*"],
+      "~/*": ["src/*"],
+    },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
