--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,6 +62,10 @@
     ],
     "react/jsx-props-no-spreading": "off",
     "react/react-in-jsx-scope": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "import/no-extraneous-dependencies": "off",
+    "no-use-before-define":"off",
+    "no-param-reassign":"off",
+    "react/jsx-no-useless-fragment": "off"
   }
 }
