--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^4.6.1",
     "axios": "^0.27.2",
+    "html-entities": "^2.3.3",
     "next": "12.3.1",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
